implemented the rest of the URL structure

--- a/vaccineSite/user/templates/user/distributor.html
+++ b/vaccineSite/user/templates/user/distributor.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Distributor log in</title>
+    <title>Distributor Main Page</title>
 </head>
 <body>
     <h1>
-        This is a distributor page after log in
+        This is the distributor main page
     </h1>
     <form method="post">
     {% csrf_token %}
