--- a/vaccineSite/user/templates/user/patient.html
+++ b/vaccineSite/user/templates/user/patient.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Patient log in</title>
+    <title>Patient Main Page</title>
 </head>
 <body>
     <h1>
-        This is a patient page after log in
+        This is a patient main page
     </h1>
     <form method="post">
     {% csrf_token %}
