--- a/vaccineSite/user/templates/user/physician.html
+++ b/vaccineSite/user/templates/user/physician.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Physician log in</title>
+    <title>Physician Main Page</title>
 </head>
 <body>
     <h1>
-        This is a physician page after log in
+        This is a physician main page
     </h1>
     <form method="post">
     {% csrf_token %}
