Fixed listview with criteria handled on the back-end, updated database meta

--- a/vaccineSite/user/templates/user/distributor_appointments.html
+++ b/vaccineSite/user/templates/user/distributor_appointments.html
@@ -10,15 +10,14 @@
     </h1>
     <ul>
     {% for appointment in object_list %}
-        {% if appointment.distributor == user.distributor %}
-    
-        <li>Current physician: {{ appointment.currphysician }}</li>
+
+        <li>Current physician: {{ appointment.physician }}</li>
         <li>Patient: {{ appointment.patient }}</li>
-        <li>Vaccine name: {{ appointment.vaccineName.vaccine_id }}</li>
-        <li>startTime: {{ appointment.startTime }}</li>
-        <li>endTime: {{ appointment.endTime }}</li>
+        <li>Vaccine name: {{ appointment.vaccine_name.brand }}</li>
+        <li>Vaccine name: {{ appointment.vaccine_name.vaccine_id }}</li>
+        <li>startTime: {{ appointment.start_time  }}</li>
+        <li>endTime: {{ appointment.end_time }}</li>
         <li>does: {{ appointment.dose }}</li>
-        {% endif %}
     {% empty %}
         <li>No articles yet.</li>
     {% endfor %}
