Fixed displaying physicians for distributor

--- a/vaccineSite/user/templates/user/distributor_profile.html
+++ b/vaccineSite/user/templates/user/distributor_profile.html
@@ -11,6 +11,7 @@
         <li>City: {{ object_list.user.city}}</li>
         <li>State: {{ object_list.user.state}}</li>
         <li>Country: {{ object_list.user.country}}</li>
+        <li>Physician: {{ object_list.physician.fget}}</li>
 
     </ul>
 </body>
