--- a/vaccineSite/user/templates/user/login.html
+++ b/vaccineSite/user/templates/user/login.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-<body>
+<body >
+    <style>
+    h1 {
+        color: black;
+        text-align: center; 
+        margin-bottom: 40px;
+
+    }
+    button {
+        background-color: white;
+        width: 280px;
+        height: 35px;
+        font-size: 20px;
+    }
+
+    body {
+        background: url(https://live-production.wcms.abc-cdn.net.au/7f6dbe75618a38ddf816757eeefc1a2c?impolicy=wcms_crop_resize&cropH=1689&cropW=3000&xPos=0&yPos=591&width=862&height=485);
+        background-size: 100%;
+    }
+
+    form {
+        margin-left: 0px;
+        text-align: center; 
+    }
+
+    #container{
+        margin-top: 10px;
+        margin-left: 0px;
+        color: #2BA5B7;
+    }
+
+    #sForm {
+        font-size: 18px;
+        color: black;
+    }
+  
+    </style>
+
+
     <h1>
-        This is the log in page
+        Login Page
     </h1>
-  <form method="post">
+
+
+  <form id = "sForm" method="post" size="50">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button id = "container" type="submit">Login</button>
   </form>
+
 </body>
 </html>
