--- a/vaccineSite/user/templates/user/distributor_signup.html
+++ b/vaccineSite/user/templates/user/distributor_signup.html
@@ -4,14 +4,56 @@
     <meta charset="UTF-8">
     <title>Distributor Sign Up</title>
 </head>
+<style> 
+    body{
+        color: white;
+        background: #89CFF0;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    #cssForm {
+        color: black;
+        font-size: 20px;
+        margin-top: 30px;
+        margin-left: 720px;
+        position: absolute;
+    }
+
+    button {
+        color: black;
+        width: 280px;
+        height: 35px;
+        margin-top: 60px;
+        margin-left: 140px;
+        font-size: 28px;
+    }
+
+     #firstRect{
+        fill: white;
+        fill-opacity: .56;
+    }
+
+
+
+</style>
 <body>
     <h1>
-        This is distributor sign up
+        Distributor Sign Up
     </h1>
-    <form method="post">
+    <form id = "cssForm" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
   </form>
 </body>
+
+<body>
+     <svg id = "firstRect" width="2400" height="2800">
+        <rect x = 440  y = 20 width="1200" height="1000" />
+     </svg>
+</body>
+
 </html>
