--- a/vaccineSite/user/templates/user/patient_signup.html
+++ b/vaccineSite/user/templates/user/patient_signup.html
@@ -4,14 +4,61 @@
     <meta charset="UTF-8">
     <title>Patient Sign Up</title>
 </head>
+<style>
+    body{
+        color: white;
+        background: #89CFF0;
+
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    button{
+        color: black;
+        width: 280px;
+        height: 35px;
+        margin-top: 40px;
+        margin-left: 60px;
+        font-size: 28px;
+    }
+
+    #form {
+        color: black;
+        font-size: 20px;
+        margin-top: 40px;
+        margin-left: 800px;
+        position: absolute;
+    }
+
+    #firstRect{
+        fill: white;
+        fill-opacity: .56;
+    }
+
+</style>
+
 <body>
     <h1>
-        This is patient sign up
+        Patient Sign Up
     </h1>
-    <form method="post">
+    <form id = "form" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
   </form>
 </body>
+
+
+<body>
+     <svg id = "firstRect" width="2400" height="2800">
+        <rect x = 460  y = 20 width="1200" height="2200" />
+     </svg>
+</body>
+
+
+
+
+
 </html>
