--- a/vaccineSite/user/templates/user/distributor_vaccine.html
+++ b/vaccineSite/user/templates/user/distributor_vaccine.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <title>Vaccine Add Page</title>
 </head>
+<style> 
+    h1 {
+        text-align: center;
+    }
+    body{
+        background-image: url("https://iot.eetimes.com/wp-content/uploads/sites/2/2019/07/factory-3550550_640.png");
+        background-size: 110%;
+        text-align: center;
+        font-size: 24px;
+    }
+</style>
 <body>
     <h1>
-        This is the vaccine add page
+        Add Vaccine Page
     </h1>
     <form method="post">
     {% csrf_token %}
