--- a/vaccineSite/user/templates/user/distributor_profile.html
+++ b/vaccineSite/user/templates/user/distributor_profile.html
@@ -5,14 +5,69 @@
     <title>Distributor Profile</title>
 </head>
 <body>
-        <h1>Distributor user name: {{ object_list.user.username }}</h1>
-        <li>Address: {{ object_list.user.address_line}}</li>
-        <li>Zip code: {{ object_list.user.zip_code}}</li>
-        <li>City: {{ object_list.user.city}}</li>
-        <li>State: {{ object_list.user.state}}</li>
-        <li>Country: {{ object_list.user.country}}</li>
-        <li>Physician: {{ object_list.physician.fget}}</li>
+    <style>
+        body {
+            font-family: "Trebuchet MS", Verdana, sans-serif;
+            font-size: 16px;
+            background-color: lightskyblue;
+            color: #696969;
+            padding: 3px;
+        }
 
-    </ul>
+        #main {
+            padding: 5px;
+            padding-left: 15px;
+            padding-right: 15px;
+            padding-bottom: 25px;
+            background-color: #ffffff;
+            border-radius: 0 0 5px 5px;
+        }
+
+        h1 {
+            font-family: Georgia, serif;
+            border-bottom: 3px solid #030099;
+            color: #003d99;
+            font-size: 30px;
+        }
+
+        button {
+            float: right;
+            padding: 3px;
+            padding-left: 5px;
+            padding-right: 5px;
+            margin: 2px;
+        }
+
+        li {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            font-size: 20px;
+        }
+    </style>
+    <div id="main">
+        <h1>
+            Distributor Portal
+
+            <button onClick="window.location='/user/logout';" type="button">Sign out</button>
+            <button onClick="window.location='/user/distributor/profile';" type="button">Profile</button>
+            <button onClick="window.location='/user/distributor/vaccine';" type="button">Vaccine</button>
+            <button onClick="window.location='/user/distributor/appointments/add';" type="button">Add Appointments</button>
+            <button onClick="window.location='/user/distributor/appointments';" type="button">Appointments</button>
+            <button onClick="window.location='/user/distributor';" type="button">Home</button>
+        </h1>
+        <h2>
+            Profile
+        </h2>
+            <ul>
+                <li><b>Distributor User Name:</b> {{ object_list.user.username }}</li>
+                <li><b>Address:</b> {{ object_list.user.address_line}}</li>
+                <li><b>Zip Code:</b> {{ object_list.user.zip_code}}</li>
+                <li><b>City:</b> {{ object_list.user.city}}</li>
+                <li><b>State:</b> {{ object_list.user.state}}</li>
+                <li><b>Country:</b> {{ object_list.user.country}}</li>
+                <li><b>Physician:</b> {{ object_list.physician.fget}}</li>
+            </ul>
+    </div>
 </body>
 </html>
