--- a/vaccineSite/user/templates/user/distributor_signup.html
+++ b/vaccineSite/user/templates/user/distributor_signup.html
@@ -46,7 +46,8 @@
     <form id = "cssForm" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
+
+    <button onClick="window.location='/user/login';" type="submit">Sign up</button>
   </form>
 </body>
 
