--- a/vaccineSite/user/templates/user/logout.html
+++ b/vaccineSite/user/templates/user/logout.html
@@ -5,12 +5,52 @@
     <title>Distributor log in</title>
 </head>
 <body>
-    <h1>
-        You've successfully logged out!
-    </h1>
-    <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    </form>
+    <style>
+        body {
+            font-family: "Trebuchet MS", Verdana, sans-serif;
+            font-size: 16px;
+            background-color: lightskyblue;
+            color: #696969;
+            padding: 3px;
+        }
+
+        #main {
+            padding: 5px;
+            padding-left: 15px;
+            padding-right: 15px;
+            padding-bottom: 25px;
+            background-color: #ffffff;
+            border-radius: 0 0 5px 5px;
+        }
+
+        h1 {
+            font-family: Georgia, serif;
+            border-bottom: 3px solid #030099;
+            color: #003d99;
+            font-size: 30px;
+        }
+
+        button {
+            float: right;
+            padding: 3px;
+            padding-left: 5px;
+            padding-right: 5px;
+            margin: 2px;
+        }
+    </style>
+    <div id="main">
+        <h1>
+            Patient Portal
+
+            <button onClick="window.location='/user/signup';" type="button">Sign Up</button>
+            <button onClick="window.location='/user/login';" type="button">Login</button>
+        </h1>
+        <h2>
+            You've successfully logged out!
+        </h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+        </form>
 </body>
 </html>
