updated distributor background

--- a/vaccineSite/user/templates/user/distributor_vaccine.html
+++ b/vaccineSite/user/templates/user/distributor_vaccine.html
@@ -5,8 +5,8 @@
     <title>Vaccine Add Page</title>
     <style>
         body {
-            background-image: url("https://iot.eetimes.com/wp-content/uploads/sites/2/2019/07/factory-3550550_640.png");
-            background-size: 110%;
+            background-image: url("https://blog.saleslayer.com/hubfs/distribution-policy.jpg");
+            background-size: 100%;
         }
     </style>
 </head>
