--- a/vaccineSite/user/templates/user/patient_appointments_book.html
+++ b/vaccineSite/user/templates/user/patient_appointments_book.html
@@ -6,7 +6,7 @@
     {% load static %}
     <style>
         body {
-            background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/91/Doctor_with_Nurse_Cartoon.svg");
+            background-image: url("https://www.cdc.gov/coronavirus/2019-ncov/images/daily-life-coping/group-with-masks.png/9/91/Doctor_with_Nurse_Cartoon.svg");
             background-size: 105%;
         }
     </style>
