--- a/vaccineSite/user/templates/user/patient_appointments.html
+++ b/vaccineSite/user/templates/user/patient_appointments.html
@@ -5,7 +5,7 @@
     <title>Patient Appointment Page</title>
     <style>
         body {
-            background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/91/Doctor_with_Nurse_Cartoon.svg");
+            background-image: url("https://www.cdc.gov/coronavirus/2019-ncov/images/daily-life-coping/group-with-masks.png");
             background-size: 105%;
         }
     </style>
