Fixed signup for both patient and physician

--- a/vaccineSite/user/templates/user/patient_appointments_book.html
+++ b/vaccineSite/user/templates/user/patient_appointments_book.html
@@ -64,9 +64,20 @@
         <h2>
             Available Appointments:
         </h2>
-        <form method="post">
-            {% csrf_token %}
+        <li><b>Current Physician:</b> {{ appointment.physician }}</li>
+        <li><b>Patient:</b> {{ appointment.patient }}</li>
+        <li><b>Vaccine Name:</b> {{ appointment.vaccine_name.brand }}</li>
+        <li><b>Vaccine Name:</b> {{ appointment.vaccine_name.vaccine_id }}</li>
+        <li><b>Start Time:</b> {{ appointment.start_time  }}</li>
+        <li><b>End Time:</b> {{ appointment.end_time }}</li>
+        <li><b>Dose:</b> {{ appointment.dose }}</li>
+
+
+
+
+        <form method="post">{% csrf_token %}
             {{ form.as_p }}
+            <button  type="submit">Confirm</button>
         </form>
     </div>
 </body>
