--- a/vaccineSite/user/templates/user/patient_appointments_my.html
+++ b/vaccineSite/user/templates/user/patient_appointments_my.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Patient Appointment Page</title>
+    <title>Patient's Registered Appointment Page</title>
     <style>
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/91/Doctor_with_Nurse_Cartoon.svg");
@@ -56,16 +56,23 @@
             Patient Portal
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
-            <button onClick="window.location='/user/patient/profile';" type="button">Profile</button>
-            <button onClick="window.location='/user/patient';" type="button">Home</button>
+            <button onClick="window.location='/user/physician/profile';" type="button">Profile</button>
+            <button onClick="window.location='/user/physician/appointments';" type="button">Appointments</button>
+            <button onClick="window.location='/user/physician';" type="button">Home</button>
         </h1>
         <h2>
-            Available Appointments:
+            Registered Appointments:
         </h2>
+        <script type="text/javascript">
+            function setCurrAppt(ele) {
+                document.getElementById('currappt').value = ele.innerHTML;
+            }
+        </script>
+        <input type="hidden" name="currappt" id="currappt" value="''''"/>
+        
         <ul>
             {% for appointment in object_list %}
 
-            <li><b>Appointment ID:</b> {{ appointment.id }}</li>
             <li><b>Current Physician:</b> {{ appointment.physician }}</li>
             <li><b>Patient:</b> {{ appointment.patient }}</li>
             <li><b>Vaccine Name:</b> {{ appointment.vaccine_name.brand }}</li>
@@ -74,12 +81,20 @@
             <li><b>End Time:</b> {{ appointment.end_time }}</li>
             <li><b>Dose:</b> {{ appointment.dose }}</li>
 
-            <button onClick="window.location='/user/patient/appointments/{{ appointment.id }}';" style="float: left;" type="button">Sign up</button>
             
             {% empty %}
-            <li>No appointments available.</li>
-            {% endfor %}
+            <li>No appointments registered for you</li>
+            {% endfor %}            
         </ul>
-    </div>
+
+        
+        
+        <!--    <p>Start time: {{ object.StartTime }}</p>-->
+        <!--    <p>End time: {{ object.EndTime }}</p>-->
+        <!--    <form method="post">-->
+        <!--    {% csrf_token %}-->
+        <!--    {{ form.as_p }}-->
+        <!--    </form>
+        <button onClick="window.location.href='physician_appointments_book/'; currappt = appointment" set style="float: left;" type="button">Sign up</button>-->
 </body>
 </html>
